src/objects/SObjectFilterCondition__c.object
<CustomObject>
    <description>Filter condition for performance indicator objects</description>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <description>The API name of the field to which condition is applied to</description>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>The operator applied to the field and the value in the SObject query</description>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>Not Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than Equals</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PerformanceTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Performance Target that the filter is applied to</description>
        <label>Performance Target</label>
        <referenceTo>PerformanceTarget__c</referenceTo>
        <relationshipLabel>SObject Filter Conditions</relationshipLabel>
        <relationshipName>SObject_Filter_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value used in the operator.</description>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SObject Filter Condition</label>
    <nameField>
        <displayFormat>SFC-{00000000}</displayFormat>
        <label>SObject Filter Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SObject Filter Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>